fix(user.css): fix double border on home shortcuts

--- a/src/user.css
+++ b/src/user.css
@@ -199,7 +199,6 @@ html {
 .main-heroCard-card,
 .x-searchResultsTracks-root > .main-gridContainer-gridContainer,
 .main-trackList-indexable,
-.view-homeShortcutsGrid-shortcut,
 .main-card-card,
 .main-heroCard-card,
 .view-homeShortcutsGrid-draggable {
